# sleepysketch

./: .gitattributes  README  README.md
arduino/libraries/SleepySketch/: Actor.c  Actor.cpp  Actor.h  BusySleeper.cpp  BusySleeper.h  Doxyfile  HeavySleeper.cpp  HeavySleeper.h  LightSleeper.cpp  LightSleeper.h  Makefile.am  RepeatingActor.cpp  RepeatingActor.h  Sleeper.cpp  Sleeper.h  SleepySketch.cpp  SleepySketch.h  configure.ac
arduino/libraries/SleepySketch/design/: sleepysketch.uxf
arduino/libraries/SleepySketch/examples/blink/: blink.ino
arduino/sketches/testing/power_measurement/: power_measurement.ino
arduino/sketches/testing/sleep/: sleep.ino
arduino/sketches/testing/sleep_sleepy/: sleep_sleepy.ino
arduino/sketches/testing/temperature/: temperature.ino
arduino/sketches/testing/temperature/design/: three-ds18b20.sch
arduino/sketches/testing/xbee-communications/api/: api.ino  api.pde~
arduino/sketches/testing/xbee-communications/transparent/: transparent.pde
git-filters/: keywords  test.txt
processing/sketches/testing/xbee-communications/api/: api.pde
